zeit.objectlog changes
======================

0.11 (unreleased)
-----------------

- Nothing changed yet.


0.10 (2011-10-06)
-----------------

- Using versions from the ZTK.

- Added missing import.


0.9 (2009-09-05)
----------------

- Added a method on the log to clean it from old entries.

0.8.1 (2009-05-15)
------------------

- No `extras_require` for tests any more.

- Renamed all ``test.py`` to ``tests.py``

0.8 (2009-04-05)
----------------

- Added missing import in interfaces.

0.7 (2008-12-08)
----------------

- When an object which is passed to ``get_log`` isn't adaptable to
  IKeyReference it is consisdered to not have any logs. This used to raise a
  TypeError.


0.6 (2008-08-12)
----------------

- Added ILogProcessor to allow for registering adapters that process logs when
  accessed through the ILog.logs property.

0.5 (2008-07-10)
----------------

- Removed the global timeline as it is a conflict hotspot.

0.4 (2008-07-08)
----------------

- Fixed display of times in LogEntrySource: Times are now in the timezone
  defined by an adapter from request to ITZInfo (bug #4314).

0.3 (2008-06-05)
----------------

- The terms do not break when a principal is deleted (bug #4146).

0.2 (2008-04-28)
----------------

- Allow logging wich interaction but without principal. Required for logging in
  lovely.remotetask.
- Creating savepoint after creating a log entry, otherwise there are some
  problems with using the logentry in the same transaction.

0.1 (2008-04-21)
----------------

- first release
