@@ -12,7 +12,7 @@ import zope.schema
 class IObjectLog(zope.interface.Interface):
     """Utility which logs object changes."""
 
-    def log(object, message, mapping=None):
+    def log(object, message, mapping=None, timestamp=None):
         """Log message for object."""
 
     def get_log(object):
@@ -51,7 +51,7 @@ class ILogEntry(zope.interface.Interface):
 class ILog(zope.interface.Interface):
     """Logging interface for one object."""
 
-    def log(message, mapping=None):
+    def log(message, mapping=None, timestamp=None):
         """Log message for context."""
 
     def get_log():
